fix footer alignment

--- a/client/css/components/_footer.scss
+++ b/client/css/components/_footer.scss
@@ -18,7 +18,7 @@
 	.icon-nau {
 		font-size: 50px;
 		position: relative;
-		top: -25px;
+		top: -40px;
 		right: 10px;
 		color: #808080;
 		color: $inuit-base-grey-5-color;
